# Shopkeeper-Agent

./: .env  .gitignore  README.md  certificates.env  main.py  pyproject.toml  test.py
Bug/: 2026-5-27-09.md  2026-5-28-09.md
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: __init__.py  add_extra_context.py  correct_sql.py  explain_result.py  extract_keywords.py  fail.py  filter_metric.py  filter_table.py  generate_sql.py  run_sql.py  (+7 more)
app/api/: dependencies.py  lifespan.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py
app/core/: context.py  log.py
app/entities/: column_info.py  column_metric.py  examples  metric_info.py  table_info.py  value_info.py
app/models/: __init__.py  column_info.py  column_metric.py  metric_info.py  table_info.py
app/prompt/: __init__.py  prompt_loader.py
app/scripts/: build_meta_knowledge.py  column_info.ndjson  export_info_to_ndjson.py  import_to_qdrant.py  metric_info.ndjson
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml  meta_config.yaml
docker/: docker-compose.yaml
docker/elasticsearch/: Dockerfile
docker/mysql/: dw.sql  meta.sql
examples/: qdrant_quickstart_demo.py
frontend/: package-lock.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx
prompts/: correct_sql.prompt  explain_result.prompt  extend_keywords_for_metric_recall.prompt  filter_metric_info.prompt  filter_table_info.prompt  generate_sql.prompt  intent_classify.prompt
(+13 files in other folders)
